# u-d-Adj-Ret

./: .gitignore  README.md  cal_adj_returns.py  check_backward_compatibility.py  gdu.json  main.py  pyproject.toml  requirements.txt
modules/: _0_cal_adj_returns.py  _0_compute_adj_rets.py  _1_check_backward_compatibility.py  _1_upload_2_GitHub.py
src/u_d_adj_ret/: __init__.py  a_compute_adj_rets.py  a_main.py  b_upload_2_GitHub.py  m1_compute_adj_rets.py  m2_upload_2_GitHub.py  main.py
