[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u_d_adj_ret"
version = "1.1.5"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "Updates TSE Daily Adjusted Returns"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pyarrow==13.0.0",
    "fastparquet==2023.8.0",
    "pandas==2.1.1",
    "mirutil==25.1.0",
    "githubdata==16.1.2",
    "mtok==1.3.0",
    "run_py==0.0.2",
    "namespace_mahdimir==3.3.0",
]

keywords = [
    "Tehran-Stock-Exchange",
]
