[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u_d_adj_ret"
version = "1.1.9"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "Updates TSE Daily Adjusted Returns"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pyarrow==13.0.0",
    "fastparquet==2023.8.0",
    "pandas==2.1.1",
    "mirutil==25.1.0",
    "githubdata==16.1.2",
    "mtok==1.3.0",
    "run_py==1.1.1",
    "namespace_mahdimir==3.3.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
keywords = [
    "Tehran-Stock-Exchange",
]

[project.urls]
"Homepage" = "https://github.com/imahdimir/u-d-Adj-Ret"
